#412: Remove no-longer-used configuration setting

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,5 @@
 .gitattributes    export-ignore
 README.md         export-ignore
+
+# Auto detect text files and perform LF normalization
+* text=auto
